[metadata]
name = bilma
version = 0.1
author = Guillermo Ruiz 
author_email = lgruiz@centrogeo.edu.mx
description = A BERT implementation for twitter in Spanish.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/msubrayada/bilma
project_urls =
    Bug Tracker = https://github.com/msubrayada/bilma/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = 
packages = find:
python_requires = >=3.6



[options.packages.find]
where = bilma
